update stealthMine.java - beta
- removed armor stuff

update stealthMine.java - beta

- fixed rendering bug

update EchestFarm.java

- improvements

update discordRPC.java

- rewrote message logic

overall updated stuff